Edit post/comment scroll bar is not showing issue resolved

--- a/web/css/viewBuzzSuccess.css
+++ b/web/css/viewBuzzSuccess.css
@@ -1032,3 +1032,6 @@ img.imgThumbnailView {
     display: none;
 }
 
+.popupEdit{
+    overflow-y: scroll;
+}
